[package]
name = "ontology-kernel"
description = "Shared ontology domain, models and HTTP handlers reused by ontology-* services"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[lib]
path = "src/lib.rs"

[features]
# `it` enables integration tests that boot an ephemeral Postgres container
# via testcontainers (used by `tests/actions_integration.rs`). These tests
# require Docker and run only in CI / on demand.
default = []
it = ["dep:testcontainers"]

[dependencies.auth-middleware]
workspace = true

[dependencies.axum]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.config]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.pyo3]
workspace = true
features = ["abi3-py311"]

[dependencies.reqwest]
workspace = true

[dependencies.semver]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.sqlx]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.uuid]
workspace = true

# Optional, gated behind the `it` feature.
[dependencies.testcontainers]
workspace = true
optional = true

[dev-dependencies.tokio]
workspace = true
features = ["macros", "rt-multi-thread"]

[dev-dependencies.serde_json]
workspace = true

[dev-dependencies.uuid]
workspace = true
features = ["v4", "serde"]

[dev-dependencies.chrono]
workspace = true

[dev-dependencies.reqwest]
workspace = true

[dev-dependencies.sqlx]
workspace = true
features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"]

[dev-dependencies.auth-middleware]
workspace = true

[[test]]
name = "actions_integration"
path = "tests/actions_integration.rs"
required-features = ["it"]
