[package]
name = "plugin-sdk"
description = "Rust + WASM SDK for OpenFoundry connectors, transforms, and widgets"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[lib]
path = "src/lib.rs"
name = "plugin_sdk"
required-features = []
crate-type = ["lib"]
