[package]
name = "query-engine"
description = "Apache DataFusion wrappers, custom UDFs, and table providers"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.arrow]
version = "53"

[dependencies.async-trait]
workspace = true

[dependencies.datafusion]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[lib]
path = "src/lib.rs"
name = "query_engine"
required-features = []
crate-type = ["lib"]
