[package]
name = "query-engine"
description = "Apache DataFusion wrappers, custom UDFs, and table providers"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.arrow]
version = "53"

[dependencies.arrow-flight]
version = "53"
features = ["flight-sql-experimental"]
optional = true

[dependencies.async-trait]
workspace = true

[dependencies.datafusion]
workspace = true

[dependencies.futures]
workspace = true
optional = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tonic]
workspace = true
optional = true

[dependencies.tracing]
workspace = true

[dev-dependencies.futures]
workspace = true

[dev-dependencies.prost]
workspace = true

[dev-dependencies.tokio-stream]
version = "0.1"
features = ["net"]

[dev-dependencies.tonic]
workspace = true

[features]
default = ["flight-client"]
flight-client = ["dep:arrow-flight", "dep:tonic", "dep:futures"]

[lib]
path = "src/lib.rs"
name = "query_engine"
required-features = []
crate-type = ["lib"]
