[package]
name = "state-machine"
description = "Postgres-backed state machine helper for OpenFoundry (ADR-0037 Foundry-pattern orchestration)"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }

[features]
default = []
# Enables the heavy integration test that boots a Postgres testcontainer,
# applies the migration template and exercises the full PgStore round-trip.
# Off by default so `cargo test -p state-machine` stays a no-IO unit run.
it-postgres = []

[lib]
path = "src/lib.rs"
name = "state_machine"
crate-type = ["lib"]
