[package]
name = "storage-abstraction"
description = "Object storage abstraction layer (S3, MinIO, local filesystem)"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.object_store]
workspace = true

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.url]
workspace = true

# Optional Iceberg integration (Apache-2.0). Enabled via the `iceberg` feature.
[dependencies.iceberg]
version = "0.9"
optional = true

[dependencies.iceberg-catalog-rest]
version = "0.9"
optional = true

# `iceberg` 0.9 re-exports neither `arrow-array` nor `parquet`, but our
# `iceberg` module needs them to construct `RecordBatch`es and Parquet
# `WriterProperties`. These versions must match iceberg-rust's public API.
[dependencies.arrow-array]
version = "57.3"
optional = true

[dependencies.parquet]
version = "57.3"
optional = true
features = ["async"]

[features]
default = []
# Enables the `iceberg` module that wraps the apache iceberg-rust crate
# (Apache-2.0). Off by default so that consumers that don't need Iceberg
# tables don't pull in the extra ~300 transitive crates.
iceberg = [
    "dep:iceberg",
    "dep:iceberg-catalog-rest",
    "dep:arrow-array",
    "dep:parquet",
]

[dev-dependencies]
arrow-array = "57.3"
arrow-schema = "57.3"
parquet = { version = "57.3", features = ["async"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
name = "storage_abstraction"
required-features = []
crate-type = ["lib"]
