[package]
name = "storage-abstraction"
description = "Object storage abstraction layer (S3, MinIO, local filesystem)"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.object_store]
workspace = true

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.url]
workspace = true

# P3 — backing-FS HMAC presigning for the LocalBackingFs path. Sha256 is
# pulled in via the workspace already; we expose it here as a direct dep
# so the crate compiles standalone.
[dependencies.sha2]
workspace = true

# P3 — S3 presigned URLs go through `object_store::aws::AmazonS3::signed_url`,
# which returns the URL associated with an HTTP method. The signer trait
# uses `reqwest::Method`, so we depend on `reqwest` for that re-export
# (we don't pull `reqwest`'s default features — we only need the method).
[dependencies.reqwest]
workspace = true
default-features = false

# Optional Iceberg integration (Apache-2.0). Enabled via the `iceberg` feature.
[dependencies.iceberg]
version = "0.9"
optional = true

[dependencies.iceberg-catalog-rest]
version = "0.9"
optional = true

# `iceberg` 0.9 re-exports neither `arrow-array` nor `parquet`, but our
# `iceberg` module needs them to construct `RecordBatch`es and Parquet
# `WriterProperties`. These versions must match iceberg-rust's public API.
[dependencies.arrow-array]
version = "57.3"
optional = true

[dependencies.parquet]
version = "57.3"
optional = true
features = ["async"]

# P2 — file-format readers (Parquet/Avro/Text). Pinned to arrow 53.x to
# match the datafusion 44 ecosystem (avoids native-library `links = "lzma"`
# clashes with the workspace's xz2 / liblzma stack). The iceberg feature
# stays on arrow 57 — the two are exposed under different rename keys so
# they can co-exist in this crate's dependency table.
[dependencies.arrow-array-readers]
package = "arrow-array"
version = "53"
optional = true

[dependencies.arrow-schema-readers]
package = "arrow-schema"
version = "53"
optional = true

[dependencies.arrow-buffer-readers]
package = "arrow-buffer"
version = "53"
optional = true

[dependencies.arrow-csv]
version = "53"
optional = true

[dependencies.arrow-json]
version = "53"
optional = true

[dependencies.parquet-readers]
package = "parquet"
version = "53"
optional = true
features = ["async"]

[dependencies.apache-avro]
workspace = true
optional = true

[dependencies.regex]
workspace = true
optional = true

[features]
default = []
# Enables the `iceberg` module that wraps the apache iceberg-rust crate
# (Apache-2.0). Off by default so that consumers that don't need Iceberg
# tables don't pull in the extra ~300 transitive crates.
iceberg = [
    "dep:iceberg",
    "dep:iceberg-catalog-rest",
    "dep:arrow-array",
    "dep:parquet",
]
# Enables the `readers` module: Parquet/Avro/Text(CSV+JSON-lines) →
# Arrow RecordBatch decoders behind the [`readers::FileReader`] trait.
# Used by the Foundry preview path in `dataset-versioning-service`.
readers = [
    "dep:arrow-array-readers",
    "dep:arrow-schema-readers",
    "dep:arrow-buffer-readers",
    "dep:arrow-csv",
    "dep:arrow-json",
    "dep:parquet-readers",
    "dep:apache-avro",
    "dep:regex",
]

[dev-dependencies]
arrow-array = "57.3"
arrow-schema = "57.3"
parquet = { version = "57.3", features = ["async"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
name = "storage_abstraction"
required-features = []
crate-type = ["lib"]
