[package]
name = "temporal-client"
description = "Domain-typed Temporal workflow client facade for Rust services"

[package.edition]
workspace = true

[package.version]
workspace = true

[package.license]
workspace = true

[package.rust-version]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
temporalio-client = { version = "0.2", optional = true }
temporalio-common = { version = "0.2", optional = true }
url = { workspace = true, optional = true }

# The official Rust SDK (`temporalio-client`/`temporalio-common`, repo
# `temporalio/sdk-core`) is still pre-release as of 2026-05, so the
# workspace keeps it behind the `WorkflowClient` trait. Production
# services enable `grpc` to talk to Temporal Frontend; unit tests can
# keep using `NoopWorkflowClient` or their own mock implementation.

[features]
default = []
# gRPC implementation against Temporal Frontend.
grpc = ["dep:temporalio-client", "dep:temporalio-common", "dep:url"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"
name = "temporal_client"
crate-type = ["lib"]
